Small changes to high-level info

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@ layout: landing-page
 
 				<header class="special container">
 					<span class="icon fa-info"></span>
-					<h2>Software Engineer • Student
+					<h2>Software Engineer • Student • Leader
 					<br />
-					Leader • Traveler • <strong>Longhorn</strong></h2>
-					<p>Unfortunately I haven't been able to travel very much yet. Hopefully
+					Sports-Enthusiast • Traveler • <strong>Longhorn</strong></h2>
+					<p>Unfortunately I haven't been able to travel very much yet. Hopefully that
 					<br />
-					that will change soon. I'm very <strong>passionate</strong> about the things I do and I'm looking to
+					will change soon. I'm very <strong>passionate</strong> about the things I do and I'm looking
 					<br />
-					solve important problems and improve the world.</p>
+					forward to improving the world by solving important problems.</p>
 				</header>
 
 				<!-- One -->
