Add information about my blog

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ layout: landing-page
 							<div class="8u">
 
 								<header>
-									<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+									<h2>I blog about the things that <strong>matter</strong> to me.</h2>
 								</header>
-								<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+								<p>Whether it's my experience with the latest technology or something that is going on in my life, I'll write about it. I'm always open to new subjects and would love feedback on my work. Feel free give me suggestions anytime.</p>
 								<footer>
 									<ul class="buttons">
-										<li><a href="#" class="button">Find Out More</a></li>
+										<li><a href="/blog.html" class="button">View Blog</a></li>
 									</ul>
 								</footer>
 
@@ -35,12 +35,12 @@ layout: landing-page
 							<div class="4u skel-cell-important">
 
 								<ul class="featured-icons">
-									<li><span class="icon fa-clock-o"><span class="label">Feature 1</span></span></li>
-									<li><span class="icon fa-volume-up"><span class="label">Feature 2</span></span></li>
-									<li><span class="icon fa-laptop"><span class="label">Feature 3</span></span></li>
-									<li><span class="icon fa-inbox"><span class="label">Feature 4</span></span></li>
-									<li><span class="icon fa-lock"><span class="label">Feature 5</span></span></li>
-									<li><span class="icon fa-cog"><span class="label">Feature 6</span></span></li>
+									<li><span class="icon fa-code"><span class="label">Feature 1</span></span></li>
+									<li><span class="icon fa-futbol-o"><span class="label">Feature 2</span></span></li>
+									<li><span class="icon fa-mobile"><span class="label">Feature 3</span></span></li>
+									<li><span class="icon fa-plane"><span class="label">Feature 4</span></span></li>
+									<li><span class="icon fa-database"><span class="label">Feature 5</span></span></li>
+									<li><span class="icon fa-film"><span class="label">Feature 6</span></span></li>
 								</ul>
 
 							</div>
