Update checkmark info

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ layout: landing-page
 								<section>
 									<span class="icon featured fa-check"></span>
 									<header>
-										<h3>This is Something</h3>
+										<h3>Education</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+									<p>I am currently in my third year at The University of Texas at Austin. I'm at the top of my class as a Electical and Computer Engineering major in the honors program.</p>
 								</section>
 
 							</div>
@@ -66,9 +66,9 @@ layout: landing-page
 								<section>
 									<span class="icon featured fa-check"></span>
 									<header>
-										<h3>Also Something</h3>
+										<h3>Experience</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+									<p>I was a Software Engineering Intern at Main Street Hub during the summer of 2015, where I worked closely with fantastic engineers to build applications for our customers.</p>
 								</section>
 
 							</div>
@@ -77,9 +77,9 @@ layout: landing-page
 								<section>
 									<span class="icon featured fa-check"></span>
 									<header>
-										<h3>Probably Something</h3>
+										<h3>Skills</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+									<p>I have written multiple REST APIs in Java, using Amazon Web Services and DynamoDB as the infrastructure. I am also skilled in version control, testing, and many programming languages.</p>
 								</section>
 
 							</div>
