Add project text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: landing-page
 									<header>
 										<h3>Education</h3>
 									</header>
-									<p>I am currently in my third year at The University of Texas at Austin. I'm at the top of my class as a Electical and Computer Engineering major in the honors program.</p>
+									<p>I am currently in my third year at The University of Texas at Austin. I'm at the top of my class as an Electical and Computer Engineering major in the honors program.</p>
 								</section>
 
 							</div>
@@ -90,7 +90,7 @@ layout: landing-page
 					<section class="wrapper style3 container special">
 
 						<header class="major">
-							<h2>Next look at this <strong>cool stuff</strong></h2>
+							<h2>Check out some of the <strong>cool stuff</strong> I've done</h2>
 						</header>
 
 						<div class="row">
@@ -99,9 +99,9 @@ layout: landing-page
 								<section>
 									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 									<header>
-										<h3>A Really Fast Train</h3>
+										<h3>Pilot</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+									<p>Pilot is a cloud-management application. It can combine your files from Dropbox, Google Drive, Facebook, and more into one location. Development is currently in progress for Mac and will come to mobile in the future.</p>
 								</section>
 
 							</div>
@@ -110,9 +110,9 @@ layout: landing-page
 								<section>
 									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 									<header>
-										<h3>An Airport Terminal</h3>
+										<h3>Thunder and Lightning</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+									<p>Thunder and Lightning are REST APIs that power the Pilot application. Thunder interfaces with a DynamoDB database to manage user information, while Lightning pulls files and data from various third party applications.</p>
 								</section>
 
 							</div>
@@ -123,9 +123,9 @@ layout: landing-page
 								<section>
 									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 									<header>
-										<h3>Hyperspace Travel</h3>
+										<h3>Space Invaders on an ARM microcontoller</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+									<p>In my second year at UT Austin, I participated in an embedded systems design contest. My friend and I programmed and wired up a version of the classic game Space Invaders in C. We won our class competiton and advanced to finals!</p>
 								</section>
 
 							</div>
@@ -134,9 +134,9 @@ layout: landing-page
 								<section>
 									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 									<header>
-										<h3>And Another Train</h3>
+										<h3>Stanford's Pintos Projects</h3>
 									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+									<p>During my Operating Systems course, myself and 2 others completed the series of Pintos projects created by Stanford, where we implemented Operating System constructs like system calls, virtual memory, scheduling, and file systems.</p>
 								</section>
 
 							</div>
@@ -144,7 +144,7 @@ layout: landing-page
 
 						<footer class="major">
 							<ul class="buttons">
-								<li><a href="#" class="button">See More</a></li>
+								<li><a href="#" class="button">View my resume to see more</a></li>
 							</ul>
 						</footer>
 
