Update action text

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: landing-page
 								<section>
 									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 									<header>
-										<h3>Space Invaders on an ARM microcontoller</h3>
+										<h3>Space Invaders on an ARM board</h3>
 									</header>
 									<p>In my second year at UT Austin, I participated in an embedded systems design contest. My friend and I programmed and wired up a version of the classic game Space Invaders in C. We won our class competiton and advanced to finals!</p>
 								</section>
@@ -136,7 +136,7 @@ layout: landing-page
 									<header>
 										<h3>Stanford's Pintos Projects</h3>
 									</header>
-									<p>During my Operating Systems course, myself and 2 others completed the series of Pintos projects created by Stanford, where we implemented Operating System constructs like system calls, virtual memory, scheduling, and file systems.</p>
+									<p>During my Operating Systems course, myself and 2 others completed the series of Pintos projects created by Stanford, where we implemented Operating System constructs such as system calls, virtual memory, scheduling, and file systems.</p>
 								</section>
 
 							</div>
@@ -156,13 +156,12 @@ layout: landing-page
 			<section id="cta">
 
 				<header>
-					<h2>Ready to do <strong>something</strong>?</h2>
-					<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+					<h2>Want to get in touch?</h2>
+					<p>Don't hesitate, I'd love to hear from you.</p>
 				</header>
 				<footer>
 					<ul class="buttons">
-						<li><a href="#" class="button special">Take My Money</a></li>
-						<li><a href="#" class="button">LOL Wut</a></li>
+						<li><a href="#" class="button special">Shoot Email</a></li>
 					</ul>
 				</footer>
 
