--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: landing-page
 							<div class="6u">
 
 								<section>
-									<a href="#" class="image featured"><img src="images/pilot-icon.png" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 									<header>
 										<h3>Pilot</h3>
 									</header>
