--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ layout: landing-page
 							<div class="6u">
 
 								<section>
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/arm-microcontroller.png" alt="" /></a>
 									<header>
 										<h3>Space Invaders on an ARM board</h3>
 									</header>
@@ -132,7 +132,7 @@ layout: landing-page
 							<div class="6u">
 
 								<section>
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/os-logo.jpg" alt="" /></a>
 									<header>
 										<h3>Stanford's Pintos Projects</h3>
 									</header>
