--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ layout: landing-page
 
 						<footer class="major">
 							<ul class="buttons">
-								<li><a href="#" class="button">View my resume to see more</a></li>
+								<li><a href="/assest/resume.pdf" class="button">View my resume to see more</a></li>
 							</ul>
 						</footer>
 
@@ -161,7 +161,7 @@ layout: landing-page
 				</header>
 				<footer>
 					<ul class="buttons">
-						<li><a href="#" class="button special">Shoot Email</a></li>
+						<li><a href="mailto:rohannagar11@gmail.com" class="button special">Shoot Email</a></li>
 					</ul>
 				</footer>
 
