--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ layout: landing-page
 
 						<footer class="major">
 							<ul class="buttons">
-								<li><a href="/assest/resume.pdf" class="button">View my resume to see more</a></li>
+								<li><a href="/assets/resume.pdf" class="button">View my resume to see more</a></li>
 							</ul>
 						</footer>
 
