--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: landing-page
 							<div class="6u">
 
 								<section>
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="https://github.com/RohanNagar/pilot-osx" class="image featured" target="_blank"><img src="images/pic01.jpg" alt="" /></a>
 									<header>
 										<h3>Pilot</h3>
 									</header>
@@ -108,7 +108,7 @@ layout: landing-page
 							<div class="6u">
 
 								<section>
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/RohanNagar/lightning" class="image featured" target="_blank"><img src="images/pic02.jpg" alt="" /></a>
 									<header>
 										<h3>Thunder and Lightning</h3>
 									</header>
@@ -121,7 +121,7 @@ layout: landing-page
 							<div class="6u">
 
 								<section>
-									<a href="#" class="image featured"><img src="images/arm-microcontroller.png" alt="" /></a>
+									<a href="#" class="image featured" target="_blank"><img src="images/arm-microcontroller.png" alt="" /></a>
 									<header>
 										<h3>Space Invaders on an ARM board</h3>
 									</header>
@@ -132,7 +132,7 @@ layout: landing-page
 							<div class="6u">
 
 								<section>
-									<a href="#" class="image featured"><img src="images/os-logo.jpg" alt="" /></a>
+									<a href="https://web.stanford.edu/class/cs140/projects/pintos/pintos_1.html" class="image featured" target="_blank"><img src="images/os-logo.jpg" alt="" /></a>
 									<header>
 										<h3>Stanford's Pintos Projects</h3>
 									</header>
@@ -144,7 +144,7 @@ layout: landing-page
 
 						<footer class="major">
 							<ul class="buttons">
-								<li><a href="/assets/resume.pdf" class="button">View my resume to see more</a></li>
+								<li><a href="/assets/resume.pdf" class="button" target="_blank">View my resume to see more</a></li>
 							</ul>
 						</footer>
 
