--- a/index.html
+++ b/index.html
@@ -7,53 +7,25 @@ permalink: /
 <div id="service">
     <div class="container">
         <div class="row centered">
+            <br>
+            <h2>About Me</h2>
+            <br>
             <div class="col-md-4">
-                <i class="fa fa-heart-o"></i>
-                <h4>Handsomely Crafted</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <i class="fa fa-code"></i>
+                <h4>Software Engineer</h4>
+                <p>I am passionate about improving the world through my software engineering skills. I have a lot of experience in this field through my classes, internships, and personal projects - and I'm excited to continue to learn.</p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-flask"></i>
-                <h4>Retina Ready</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <i class="fa fa-pencil"></i>
+                <h4>Student</h4>
+                <p>I am in my third year at The University of Texas at Austin, majoring in Computer Engineering.  I have been a part of the Engineering Honors Program since I was admitted to the university. I am also active in a number of student organizations, including UTCS MAD (Mobile App Development) and the national engineering honor society Eta Kappa Nu.</p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-trophy"></i>
-                <h4>Quality Theme</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
-            </div>		 				
+                <i class="fa fa-calendar"></i>
+                <h4>Hobbist</h4>
+                <p>I have many hobbies, including: video games, watching TV, biking, and sports. If I'm not going to class or writing code, I'm doing one of these!</p>
+            </div>
         </div>
-    </div><! --/container -->
-</div><! --/service -->
-
-{% include portfolio.html title="LATEST WORKS" limit=10 %}
-
-<div class="container mtb">
-    <div class="row">
-        <div class="col-lg-4 col-lg-offset-1">
-            <h4>More About Our Agency.</h4>
-            <p>{{ site.about }}</p>
-            <p><br/><a href="{{ "/about/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
-        </div>
-
-        <div class="col-lg-3">
-            <h4>Frequently Asked</h4>
-            <div class="hline"></div>
-            {% for post in site.categories['question'] %} 
-                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
-            {% endfor %}
-        </div>
-
-        <div class="col-lg-3">
-            <h4>Latest Posts</h4>
-            <div class="hline"></div>
-            {% for post in site.categories['blog'] limit:5 %} 
-                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}.</a></p>
-            {% endfor %} 
-        </div>
-
-    </div><! --/row -->
-</div><! --/container -->
+        <br>
+    </div><!--/container -->
+</div><!--/service -->
