Fix some style issues

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@ permalink: /
 <div id="service">
     <div class="container">
         <div class="row centered">
-            <br>
-            <h2>About Me</h2>
-            <br>
+            <h3>ABOUT ME</h3>
             <div class="col-md-4">
                 <i class="fa fa-code"></i>
                 <h4>Software Engineer</h4>
@@ -26,6 +24,5 @@ permalink: /
                 <p>I have many hobbies, including: video games, watching TV, biking, and sports. If I'm not going to class or writing code, I'm doing one of these!</p>
             </div>
         </div>
-        <br>
     </div><!--/container -->
 </div><!--/service -->
