--- a/blog.html
+++ b/blog.html
@@ -5,28 +5,19 @@ permalink: /blog/
 ---
 
 <div class="container mtb">
-    <div class="row">
+    <div class="row centered">
 
-        <! -- BLOG POSTS LIST -->
-        <div class="col-lg-8">
+        <!-- BLOG POSTS -->
+        {% for post in site.categories['blog'] %}
+            <!-- Blog Post -->
+            <a href="{{ post.url | prepend: site.baseurl }}"><h2 class="ctitle">{{ post.title }}</h2></a>
+            <p><csmall>{{ post.date | date: "%b %-d, %Y" }} | By: {{ post.author }}</csmall></p>
+            <p>{{ post.excerpt }}</p>
+            <p><a href="{{ post.url | prepend: site.baseurl }}">[Read More]</a></p>
+            <div class="hline"></div>
 
-            {% for post in site.categories['blog'] %}
-                <! -- Blog Post -->
-                <a href="{{ post.url | prepend: site.baseurl }}">
-                    <img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}">
-                </a>    
-                <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
-                <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | By: {{ post.author }}</csmall></p>
-                {{ post.excerpt }}
-                <p><a href="{{ post.url | prepend: site.baseurl }}">[Read More]</a></p>
-                <div class="hline"></div>
+            <div class="spacing"></div>
+          {% endfor %}
 
-                <div class="spacing"></div>
-            {% endfor %}
-
-        </div><! --/col-lg-8 -->
-
-        {% include sidebar.html %}
-
-    </div><! --/row -->
-</div><! --/container -->
+    </div> <!--/row -->
+</div> <!--/container -->
