--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 permalink: /
 ---
 
-<div id="service">
+<div id="about">
     <div class="container">
         <div class="row centered">
             <h3>ABOUT ME</h3>
