Inital skeleton for new landing page

--- a/index.html
+++ b/index.html
@@ -1,28 +1,106 @@
----
-layout: index
-title: Home
-permalink: /
----
+<!DOCTYPE HTML>
+<!--
+	Identity by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    <title>Rohan Nagar</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  </head>
+  <body class="is-loading">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      
+      <!-- Main -->
+      <section id="main">
+        <header>
+	  <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+          <h1>Rohan Nagar</h1>
+	  <p>Software Engineer</p>
+	</header>
+	
+        <!--
+	<hr />
+	<h2>Extra Stuff!</h2>
+	<form method="post" action="#">
+	  <div class="field">
+	    <input type="text" name="name" id="name" placeholder="Name" />
+	  </div>
+	  <div class="field">
+	    <input type="email" name="email" id="email" placeholder="Email" />
+          </div>
+	  <div class="field">
+	    <div class="select-wrapper">
+	      <select name="department" id="department">
+	        <option value="">Department</option>
+		<option value="sales">Sales</option>
+	        <option value="tech">Tech Support</option>
+		<option value="null">/dev/null</option>
+	      </select>
+	    </div>
+	  </div>
+	  <div class="field">
+	    <textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
+	  </div>
+	  <div class="field">
+	    <input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
+	  </div>
+	  <div class="field">
+	    <label>But are you a robot?</label>
+	    <input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
+	    <input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
+	  </div>
+	  <ul class="actions">
+	    <li><a href="#" class="button">Get Started</a></li>
+	  </ul>
+	</form>
+        <hr />
+        -->
+	
+        <footer>
+	  <ul class="icons">
+	    <li><a href="https://www.twitter.com/RohanNagar22" target="_blank" class="fa-twitter">Twitter</a></li>
+	    <li><a href="https://www.instagram.com/rnagar95/" target="_blank" class="fa-instagram">Instagram</a></li>
+	    <li><a href="https://www.facebook.com/rnagar" target="_blank" class="fa-facebook">Facebook</a></li>
+	    <li><a href="https://www.linkedin.com/in/rohannagar" target="_blank" class="fa-linkedin">LinkedIn</a></li>
+	    <li><a href="https://www.github.com/RohanNagar" target="_blank" class="fa-github">Github</a></li>
+	  </ul>
+          <ul class="actions">
+            <li><a href="/assets/documents/resume.pdf" class="button">Resume</a></li>
+	  </ul>
+        </footer>
+      
+      </section>
 
-<div id="about">
-    <div class="container">
-        <div class="row centered">
-            <h3>ABOUT ME</h3>
-            <div class="col-md-4">
-                <i class="fa fa-code"></i>
-                <h4>Software Engineer</h4>
-                <p>I am passionate about improving the world through my software engineering skills. I have a lot of experience in this field through my classes, internships, and personal projects - and I'm excited to continue to learn.</p>
-            </div>
-            <div class="col-md-4">
-                <i class="fa fa-pencil"></i>
-                <h4>Student</h4>
-                <p>I am in my third year at The University of Texas at Austin, majoring in Computer Engineering.  I have been a part of the Engineering Honors Program since I was admitted to the university. I am also active in a number of student organizations, including UTCS MAD (Mobile App Development) and the national engineering honor society Eta Kappa Nu.</p>
-            </div>
-            <div class="col-md-4">
-                <i class="fa fa-calendar"></i>
-                <h4>Hobbist</h4>
-                <p>I have many hobbies, including: video games, watching TV, biking, and sports. If I'm not going to class or writing code, I'm doing one of these!</p>
-            </div>
-        </div>
-    </div> <!--/container -->
-</div> <!--/service -->
+      <!-- Footer -->
+      <footer id="footer">
+	<ul class="copyright">
+	  <li>&copy; Rohan Nagar</li>
+          <li>Design By: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+      </footer>
+
+    </div>
+
+    <!-- Scripts -->
+    <!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
+    <script>
+      if ('addEventListener' in window) {
+        window.addEventListener('load', function() {
+            document.body.className = document.body.className.replace(/\bis-loading\b/, '');
+        });
+	document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+      }
+    </script>
+  </body>
+
+</html>
+
