Add more account links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	    <li><a href="https://www.github.com/RohanNagar" target="_blank" class="fa-github">Github</a></li>
 	  </ul>
           <ul class="actions">
-            <li><a href="/pages/accounts.html" target="_blank" class="button">See More</a></li>
+            <li><a href="/pages/accounts.html" class="button">See More</a></li>
             <li><a href="/assets/documents/resume.pdf" target="_blank" class="button">Resume</a></li>
 	  </ul>
         </footer>
