--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -22,7 +22,8 @@
       <!-- Main -->
       <section id="main">
         <header>
-          <h1>Where to Find Me</h1>
+	  <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+	  <p>More Related Accounts</p>
 	</header>
 	
         <footer>
