Fix avatar URL reference in accounts page

--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -22,7 +22,7 @@
       <!-- Main -->
       <section id="main">
         <header>
-	  <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+	  <span class="avatar"><img src="../images/avatar.jpg" alt="" /></span>
 	  <p>More Related Accounts</p>
 	</header>
 	
