Add Pinterest and move accounts around

--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -29,14 +29,17 @@
         <footer>
 	  <ul class="icons">
 	    <li><a href="https://www.twitter.com/RohanNagar22" target="_blank" class="fa-twitter">Twitter</a></li>
-	    <li><a href="https://www.instagram.com/rnagar95/" target="_blank" class="fa-instagram">Instagram</a></li>
 	    <li><a href="https://www.facebook.com/rnagar" target="_blank" class="fa-facebook">Facebook</a></li>
+	    <li><a href="https://www.instagram.com/rnagar95/" target="_blank" class="fa-instagram">Instagram</a></li>
 	    <li><a href="https://www.linkedin.com/in/rohannagar" target="_blank" class="fa-linkedin">LinkedIn</a></li>
-	    <li><a href="https://www.youtube.com/channel/UClvob-LqFhb4QM6cLWfSMkg" target="_blank" class="fa-youtube-play">YouTube</a></li>
 	  </ul>
           <ul class="icons">
+	    <li><a href="https://www.youtube.com/channel/UClvob-LqFhb4QM6cLWfSMkg" target="_blank" class="fa-youtube-play">YouTube</a></li>
+	    <li><a href="https://www.pinterest.com/rohannagar11/" target="_blank" class="fa-pinterest">Pinterest</a></li>
 	    <li><a href="https://www.github.com/RohanNagar" target="_blank" class="fa-github">Github</a></li>
 	    <li><a href="http://www.stackoverflow.com/users/3148709/rohan" target="_blank" class="fa-stack-overflow">Stack Overflow</a></li>
+          </ul>
+          <ul class-"icons">
 	    <li><a href="http://steamcommunity.com/id/Roadripper95" target="_blank" class="fa-steam">Stack Overflow</a></li>
           </ul>
         </footer>
