Fix visual bug on accounts page

--- a/pages/accounts.html
+++ b/pages/accounts.html
@@ -39,7 +39,7 @@
 	    <li><a href="https://www.github.com/RohanNagar" target="_blank" class="fa-github">Github</a></li>
 	    <li><a href="http://www.stackoverflow.com/users/3148709/rohan" target="_blank" class="fa-stack-overflow">Stack Overflow</a></li>
           </ul>
-          <ul class-"icons">
+          <ul class="icons">
 	    <li><a href="http://steamcommunity.com/id/Roadripper95" target="_blank" class="fa-steam">Stack Overflow</a></li>
           </ul>
         </footer>
